Added supportablity based on Red Hat support matrix

--- a/vmosmapping.conf
+++ b/vmosmapping.conf
@@ -1,6 +1,6 @@
 [vcenter]
 host = 
-admin = administrator@infra.trilio.io
+admin = 
 password = 
 ssl_verify = False
 
@@ -12,3 +12,6 @@ admin_project = admin
 admin_domain = Default
 region_name = regionOne
 ssl_verify = False
+
+[migration]
+hypervisor = "RHEL 8"
